--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
-<html>
-<head></head>
-<body><h1>test</h1></body>
+<!doctype html>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Bopimo! Modding</title>
+        <link rel="stylesheet" href="/Files/CSS/theme.css">
+
+        <!-- Favicons -->
+        <link rel="icon" type="image/png" href="/Files/Images/Favicons/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/svg+xml" href="/Files/Images/Favicons/favicon.svg" />
+        <link rel="shortcut icon" href="/Files/Images/Favicons/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/Files/Images/Favicons/apple-touch-icon.png" />
+        <meta name="apple-mobile-web-app-title" content="Bopimod" />
+        <link rel="manifest" href="/Files/Images/Favicons/site.webmanifest" />
+    </head>
+    <body>
+        <div class="background-pattern"></div>
+        <div class="main">
+            <div class="logo-small">
+                <img src="/Files/Images/modding-logo-small.svg">
+            </div>
+            <h1 class="text">...?</h1>
+        </div>
+    </body>
 </html>
