A bit messy, but it works for now

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
             <div class="logo-small">
                 <img src="/Files/Images/modding-logo-small.svg">
             </div>
-            <h1 class="text">...?</h1>
+            <div id="soon-text">
+                <h1 id="text" class="rainbow-text-outline" style="height: 50px; margin: 0;">
+                    <wavy>S</wavy><wavy>o</wavy><wavy>o</wavy><wavy>n</wavy><wavy>.</wavy><wavy>.</wavy><wavy>.</wavy>
+                </h1>
+                <h1 id="outline" class="only-text-outline" style="height: 50px; margin: 0;">
+                    <wavy>S</wavy><wavy>o</wavy><wavy>o</wavy><wavy>n</wavy><wavy>.</wavy><wavy>.</wavy><wavy>.</wavy>
+                </h1>
+            </div>
         </div>
     </body>
 </html>
