Some meta stuff

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
         <title>Bopimo! Modding</title>
+        <meta property="og:title" content="Bopimo! Modding">
+        <meta property="og:url" content="https://bopimod.com">
+        <meta property="og:image" content="https://bopimod.com/Files/Images/Favicons/web-app-manifest-512x512.png">
+
         <link rel="stylesheet" href="/Files/CSS/theme.css">
 
         <!-- Favicons -->
