--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Bopimo! Modding</title>
         <meta property="og:title" content="Bopimo! Modding">
         <meta property="og:url" content="https://bopimod.com">
-        <meta property="og:image" content="https://bopimod.com/Files/Images/Favicons/web-app-manifest-512x512.png">
+        <meta property="og:image" content="https://bopimod.com/Files/Images/ModdingServerIcon.png">
+        <meta property="og:description" content="Under Construction.">
 
         <link rel="stylesheet" href="/Files/CSS/theme.css">
 
