--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <meta property="og:title" content="Bopimo! Modding">
         <meta property="og:url" content="https://bopimod.com">
         <meta property="og:image" content="https://bopimod.com/Files/Images/ModdingServerIcon.png">
-        <meta property="og:description" content="Under Construction.">
+        <meta property="og:description" content="Under Construction.
+        https://discord.gg/qKhMmYXN5M
+        https://github.com/Bopimo-Modding">
 
         <link rel="stylesheet" href="/Files/CSS/theme.css">
 
