--- a/index.html
+++ b/index.html
@@ -36,5 +36,10 @@
                 </h1>
             </div>
         </div>
+        <div class="socials">
+            <a href="https://discord.gg/qKhMmYXN5M"><img alt="Discord Logo" src="/Files/Images/Icons/Social/discord/white.svg"></a>
+            <a href="https://github.com/Bopimo-Modding"><img alt="Github Logo" src="/Files/Images/Icons/Social/github/white.svg"></a>
+            
+        </div>
     </body>
 </html>
