--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     </head>
     <body>
         <div class="background-pattern"></div>
+        <div class="build-info text-outline">
+            <h3>0.4.0-beta1</h3>
+            <h3>Build Information</h3>
+            <h3>Build Time | 2025-01-06 22:25</h3>
+            <h3>Server OS | Ubuntu 22.04 20241215.1.0</h3>
+        </div>
         <div class="main">
             <div class="logo-small">
                 <img src="/Files/Images/modding-logo-small.svg">
