--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
         <meta name="apple-mobile-web-app-title" content="Bopimod" />
         <link rel="manifest" href="/Files/Images/Favicons/site.webmanifest" />
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-JobWAqYk5CSjWuVV3mxgS+MmccJqkrBaDhk8SKS1BW+71dJ9gzascwzW85UwGhxiSyR7Pxhu50k+Nl3+o5I49A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="/Files/JS/random404text.js"></script>
     </head>
     <body>
