--- a/404.html
+++ b/404.html
@@ -7,8 +7,7 @@
         <meta property="og:title" content="Bopimo! Modding">
         <meta property="og:url" content="https://bopimod.com">
         <meta property="og:image" content="https://bopimod.com/Files/Images/ModdingServerIcon.png">
-        <meta property="og:description" content="Under Construction.
-        https://github.com/Bopimo-Modding">
+        <meta property="og:description" content="404 Page not found.">
 
         <link rel="stylesheet" href="/Files/CSS/theme.css">
         <link rel="stylesheet" href="/Files/CSS/404.css">
