Move things around

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         https://github.com/Bopimo-Modding">
 
         <link rel="stylesheet" href="/Files/CSS/theme.css">
+        <link rel="stylesheet" href="/Files/CSS/index.css">
+        <link rel="stylesheet" href="/Files/CSS/wavy.css">
 
         <!-- Favicons -->
         <link rel="icon" type="image/png" href="/Files/Images/Favicons/favicon-96x96.png" sizes="96x96" />
@@ -23,9 +25,9 @@
     <body>
         <div class="background-pattern"></div>
         <div class="build-info text-outline">
-            <h3>0.5.0-beta4</h3>
+            <h3>0.5.0-beta5</h3>
             <h3>Build Information</h3>
-            <h3>Build Time | 2025-01-07 04:44</h3>
+            <h3>Build Time | 2025-01-07 24:48</h3>
             <h3>Server OS | Ubuntu 22.04 20241215.1.0</h3>
         </div>
         <div class="main">
