--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,8 @@
         https://github.com/Bopimo-Modding">
 
         <link rel="stylesheet" href="/Files/CSS/theme.css">
+        <link rel="stylesheet" href="/Files/CSS/test.css">
+        <link rel="stylesheet" href="/Files/CSS/wavy.css">
 
         <!-- Favicons -->
         <link rel="icon" type="image/png" href="/Files/Images/Favicons/favicon-96x96.png" sizes="96x96" />
@@ -29,15 +31,9 @@
             <h3>Server OS | Ubuntu 22.04 20241215.1.0</h3>
         </div>
         <div class="main">
-            <div class="logo-small">
-                <img src="/Files/Images/modding-logo-small.svg">
-            </div>
             <div id="soon-text">
                 <h1 id="text" class="rainbow-text-outline" style="height: 50px; margin: 0;">
-                    <wavy>S</wavy><wavy>o</wavy><wavy>o</wavy><wavy>n</wavy><wavy>.</wavy><wavy>.</wavy><wavy>.</wavy>
-                </h1>
-                <h1 id="outline" class="only-text-outline" style="height: 50px; margin: 0;">
-                    <wavy>S</wavy><wavy>o</wavy><wavy>o</wavy><wavy>n</wavy><wavy>.</wavy><wavy>.</wavy><wavy>.</wavy>
+                    <wavy>w</wavy><wavy>e</wavy><wavy>e</wavy><wavy>e</wavy><wavy>!</wavy><wavy> </wavy> <wavy>^</wavy><wavy>_</wavy><wavy>^</wavy>
                 </h1>
             </div>
         </div>
