--- a/test/index.html
+++ b/test/index.html
@@ -25,15 +25,16 @@
     <body>
         <div class="background-pattern"></div>
         <div class="build-info text-outline">
-            <h3>0.5.0-beta4</h3>
+            <h3>0.5.0-beta7</h3>
             <h3>Build Information</h3>
-            <h3>Build Time | 2025-01-07 04:44</h3>
+            <h3>Build Time | 2025-01-07 21:18</h3>
             <h3>Server OS | Ubuntu 22.04 20241215.1.0</h3>
         </div>
         <div class="main">
-            <div id="soon-text">
+            <div class="background-pattern-static"></div>
+            <div id="content">
                 <h1 id="text" class="rainbow-text-outline" style="height: 50px; margin: 0;">
-                    <wavy>w</wavy><wavy>e</wavy><wavy>e</wavy><wavy>e</wavy><wavy>!</wavy><wavy> </wavy> <wavy>^</wavy><wavy>_</wavy><wavy>^</wavy>
+                    <wavy>W</wavy><wavy>e</wavy><wavy>e</wavy><wavy>e</wavy><wavy>!</wavy><wavy> </wavy> <wavy>^</wavy><wavy>_</wavy><wavy>^</wavy>
                 </h1>
             </div>
         </div>
