--- a/FAQs/index.html
+++ b/FAQs/index.html
@@ -11,8 +11,7 @@
         https://github.com/Bopimo-Modding">
 
         <link rel="stylesheet" href="/Files/CSS/theme.css">
-        <link rel="stylesheet" href="/Files/CSS/index.css">
-        <link rel="stylesheet" href="/Files/CSS/wavy.css">
+        <link rel="stylesheet" href="/Files/CSS/FAQs.css">
 
         <!-- Favicons -->
         <link rel="icon" type="image/png" href="/Files/Images/Favicons/favicon-96x96.png" sizes="96x96" />
@@ -24,29 +23,18 @@
     </head>
     <body>
         <div class="background-pattern"></div>
-        <div class="build-info text-outline">
-            <h3>0.6.0-beta1</h3>
-            <h3>Build Information</h3>
-            <h3>Build Time | 2025-01-08 22:38</h3>
-            <h3>Server OS | Ubuntu 22.04 20241215.1.0</h3>
+        <div class="title text-outline">
+            <h1>Choose a modding article!</h1>
         </div>
         <div class="main">
-            <div class="logo-small">
-                <img src="/Files/Images/modding-logo-small.svg">
+            <div id="content text-outline">
+                <a href="/">
+                    <div class="article">
+                        <img src="/Files/Images/Thumbnails/ModdingThumbnail.png">
+                        <p>Article name</p>
+                    </div>
+                </a>
             </div>
-            <div id="soon-text">
-                <h1 id="text" class="rainbow-text-outline" style="height: 50px; margin: 0;">
-                    <wavy>S</wavy><wavy>o</wavy><wavy>o</wavy><wavy>n</wavy><wavy>.</wavy><wavy>.</wavy><wavy>.</wavy>
-                </h1>
-                <h1 id="outline" class="only-text-outline" style="height: 50px; margin: 0;">
-                    <wavy>S</wavy><wavy>o</wavy><wavy>o</wavy><wavy>n</wavy><wavy>.</wavy><wavy>.</wavy><wavy>.</wavy>
-                </h1>
-            </div>
-        </div>
-        <div class="socials">
-            <a href="https://discord.gg/qKhMmYXN5M"><img alt="Discord Logo" src="/Files/Images/Icons/Social/discord/white.svg"></a>
-            <a href="https://github.com/Bopimo-Modding"><img alt="Github Logo" src="/Files/Images/Icons/Social/github/white.svg"></a>
-            
         </div>
     </body>
 </html>
